debug enrolls
